unpackaged/main/default/objects/ResponseItem__c/ResponseItem__c.object-meta.xml
<CustomObject>
    <label>ResponseItem</label>
    <nameField>
        <displayFormat>RI-{00000}</displayFormat>
        <label>ResponseItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ResponseItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>