unpackaged/main/default/objects/ResponseItem__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>ResponseItems</relationshipLabel>
    <relationshipName>ResponseItems</relationshipName>
    <type>Lookup</type>
</CustomField>