unpackaged/main/default/objects/ResponseItem__c/fields/Response1__c.field-meta.xml
<CustomField>
    <fullName>Response1__c</fullName>
    <label>Response1</label>
    <referenceTo>Response__c</referenceTo>
    <relationshipLabel>ResponseItems</relationshipLabel>
    <relationshipName>ResponseItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>