unpackaged/main/default/objects/ResponseItem__c/fields/SubmissionDateTime__c.field-meta.xml
<CustomField>
    <fullName>SubmissionDateTime__c</fullName>
    <label>SubmissionDateTime</label>
    <type>DateTime</type>
</CustomField>