unpackaged/main/default/objects/ResponseItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assessment__c</columns>
    <columns>Response_Type__c</columns>
    <columns>Response__c</columns>
    <columns>Response1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>